# rust-complete-webserver

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker.yaml  pipeline.yaml
src/: main.rs
src/api/: mod.rs  routes.rs  tests.rs  user_api.rs
src/auth/: api_key.rs  auth0.rs  auth_middleware.rs  claims.rs  error.rs  mod.rs
src/configuration/: config.rs  mod.rs  prelude.rs  tests.rs
src/database/: error.rs  mod.rs  mongodb_repo.rs  repository.rs  tests.rs
src/models/: app.rs  mod.rs  user_model.rs
